clusters/main/awx-authentik-sso/cloudbeaver-authentik-outpost-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "annotations": {
      "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"app.kubernetes.io/component\":\"authentik-outpost-proxy\",\"app.kubernetes.io/part-of\":\"aiot-platform\"},\"name\":\"authentik-outpost-proxy\",\"namespace\":\"aiot\"},\"spec\":{\"externalName\":\"authentik-server.authentik.svc.cluster.local\",\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":80}],\"type\":\"ExternalName [...]
      "meta.helm.sh/release-name": "aiot-pipeline",
      "meta.helm.sh/release-namespace": "aiot"
    },
    "labels": {
      "app.kubernetes.io/component": "redpanda-console-authentik-outpost",
      "app.kubernetes.io/instance": "aiot-pipeline",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "aiot-pipeline",
      "app.kubernetes.io/part-of": "aiot-platform",
      "helm.sh/chart": "aiot-pipeline-1.0.5",
      "helm.toolkit.fluxcd.io/name": "aiot-pipeline",
      "helm.toolkit.fluxcd.io/namespace": "aiot"
    },
    "name": "authentik-outpost-proxy",
    "namespace": "aiot"
  },
  "spec": {
    "externalName": "authentik-server.authentik.svc.cluster.local",
    "ports": [
      {
        "name": "http",
        "port": 80,
        "protocol": "TCP",
        "targetPort": 80
      }
    ],
    "sessionAffinity": "None",
    "type": "ExternalName"
  }
}
