clusters/main/awx-authentik-sso/awx-ingress-authentik-redirect.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": {
    "annotations": {
      "cert-manager.io/cluster-issuer": "letsencrypt-prod",
      "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"cert-manager.io/cluster-issuer\":\"letsencrypt-prod\",\"nginx.ingress.kubernetes.io/proxy-body-size\":\"200m\",\"nginx.ingress.kubernetes.io/ssl-redirect\":\"true\"},\"labels\":{\"app.kubernetes.io/component\":\"awx\",\"app.kubernetes.io/managed-by\":\"awx-operator\",\"app.kubernetes.io/operator-version\":\"2.19.1\",\"app.kubernetes.io/part-of\ [...]
      "nginx.ingress.kubernetes.io/configuration-snippet": "set $awx_sso 0;\nif ($http_cookie !~* \"awx_sessionid=\") { set $awx_sso 1; }\nif ($request_uri ~ \"^/sso/\") { set $awx_sso 0; }\nif ($request_uri ~ \"^/static/\") { set $awx_sso 0; }\nif ($request_uri ~ \"^/api/\") { set $awx_sso 0; }\nif ($request_uri ~ \"^/websocket/\") { set $awx_sso 0; }\nif ($arg_local_login = \"1\") { set $awx_sso 0; }\nif ($awx_sso = 1) { return 302 /sso/login/saml/?idp=authentik; }",
      "nginx.ingress.kubernetes.io/proxy-body-size": "200m",
      "nginx.ingress.kubernetes.io/ssl-redirect": "true"
    },
    "labels": {
      "app.kubernetes.io/component": "awx",
      "app.kubernetes.io/managed-by": "awx-operator",
      "app.kubernetes.io/operator-version": "2.19.1",
      "app.kubernetes.io/part-of": "awx"
    },
    "name": "awx-ingress",
    "namespace": "awx",
    "ownerReferences": [
      {
        "apiVersion": "awx.ansible.com/v1beta1",
        "kind": "AWX",
        "name": "awx",
        "uid": "8d5bf391-87e7-4965-9a1b-5097babfc1bd"
      }
    ]
  },
  "spec": {
    "ingressClassName": "nginx",
    "rules": [
      {
        "host": "awx.46.4.123.8.nip.io",
        "http": {
          "paths": [
            {
              "backend": {
                "service": {
                  "name": "awx-service",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/",
              "pathType": "Prefix"
            }
          ]
        }
      }
    ],
    "tls": [
      {
        "hosts": [
          "awx.46.4.123.8.nip.io"
        ],
        "secretName": "awx-tls"
      }
    ]
  }
}
