clusters/main/awx-authentik-sso/cloudbeaver-authentik-outpost-ingress.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": {
    "annotations": {
      "cert-manager.io/cluster-issuer": "letsencrypt-prod",
      "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"Ingress\",\"metadata\":{\"annotations\":{\"cert-manager.io/cluster-issuer\":\"letsencrypt-prod\",\"nginx.ingress.kubernetes.io/ssl-redirect\":\"true\"},\"name\":\"cloudbeaver-authentik-outpost\",\"namespace\":\"aiot\"},\"spec\":{\"ingressClassName\":\"nginx\",\"rules\":[{\"host\":\"cloudbeaver.46.4.123.8.nip.io\",\"http\":{\"paths\":[{\"backend\":{\"service\":{\"name\":\"authentik-outpo [...]
      "nginx.ingress.kubernetes.io/ssl-redirect": "true"
    },
    "name": "cloudbeaver-authentik-outpost",
    "namespace": "aiot"
  },
  "spec": {
    "ingressClassName": "nginx",
    "rules": [
      {
        "host": "cloudbeaver.46.4.123.8.nip.io",
        "http": {
          "paths": [
            {
              "backend": {
                "service": {
                  "name": "authentik-outpost-proxy",
                  "port": {
                    "number": 80
                  }
                }
              },
              "path": "/outpost.goauthentik.io",
              "pathType": "Prefix"
            }
          ]
        }
      }
    ],
    "tls": [
      {
        "hosts": [
          "cloudbeaver.46.4.123.8.nip.io"
        ],
        "secretName": "cloudbeaver-tls"
      }
    ]
  }
}
