clusters/main/awx-authentik-sso/cloudbeaver-ingress-authentik.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "Ingress",
  "metadata": {
    "annotations": {
      "cert-manager.io/cluster-issuer": "letsencrypt-prod",
      "meta.helm.sh/release-name": "cloudbeaver",
      "meta.helm.sh/release-namespace": "aiot",
      "nginx.ingress.kubernetes.io/auth-response-headers": "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid",
      "nginx.ingress.kubernetes.io/auth-signin": "https://$http_host/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri",
      "nginx.ingress.kubernetes.io/auth-snippet": "proxy_set_header Host $http_host;\nproxy_set_header X-Forwarded-Host $http_host;\n",
      "nginx.ingress.kubernetes.io/auth-url": "http://authentik-server.authentik.svc.cluster.local/outpost.goauthentik.io/auth/nginx",
      "nginx.ingress.kubernetes.io/ssl-redirect": "true"
    },
    "labels": {
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "cloudbeaver",
      "helm.toolkit.fluxcd.io/name": "cloudbeaver",
      "helm.toolkit.fluxcd.io/namespace": "aiot",
      "kustomize.toolkit.fluxcd.io/name": "awx-authentik-sso",
      "kustomize.toolkit.fluxcd.io/namespace": "flux-system"
    },
    "name": "cloudbeaver",
    "namespace": "aiot"
  },
  "spec": {
    "ingressClassName": "nginx",
    "rules": [
      {
        "host": "cloudbeaver.46.4.123.8.nip.io",
        "http": {
          "paths": [
            {
              "backend": {
                "service": {
                  "name": "cloudbeaver",
                  "port": {
                    "name": "http"
                  }
                }
              },
              "path": "/",
              "pathType": "Prefix"
            }
          ]
        }
      }
    ],
    "tls": [
      {
        "hosts": [
          "cloudbeaver.46.4.123.8.nip.io"
        ],
        "secretName": "cloudbeaver-tls"
      }
    ]
  }
}
